refactor: update user-related classes and error handling for improved clarity and consistency