@@ -1,15 +1,20 @@
 package co.com.crediya.authentication.api.exceptions;
 
+import co.com.crediya.authentication.api.dto.ErrorResponse;
 import co.com.crediya.authentication.model.exceptions.InvalidCredentialsException;
 import co.com.crediya.authentication.model.exceptions.InvalidUserDataException;
 import co.com.crediya.authentication.model.exceptions.UserAlreadyExistsException;
 import co.com.crediya.authentication.model.exceptions.UserNotFoundException;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.boot.web.reactive.error.ErrorWebExceptionHandler;
 import org.springframework.core.annotation.Order;
 import org.springframework.core.io.buffer.DataBuffer;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Component;
 import org.springframework.validation.FieldError;
 import org.springframework.web.server.ServerWebExchange;
@@ -17,97 +22,108 @@ import reactor.core.publisher.Mono;
 
 import java.nio.charset.StandardCharsets;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import java.util.function.Function;
 
 @Component
 @Order(-2)
 @Slf4j
+@RequiredArgsConstructor
 public class GlobalExceptionHandler implements ErrorWebExceptionHandler {
 
+    private static final String VALIDATION_ERROR_MESSAGE = "Validation errors in request data";
+    private static final String INVALID_FORMAT_MESSAGE = "Invalid ID format provided";
+    private static final String UNEXPECTED_ERROR_MESSAGE = "An unexpected error occurred";
+    private static final String FIELD_ERROR_FORMAT = "Field '%s' with value '%s': %s";
+
+    private final ObjectMapper objectMapper;
+
+    private final Map<Class<? extends Throwable>, Function<Throwable, ErrorMappingResult>> exceptionMappings = Map.of(
+            InvalidCredentialsException.class, ex -> new ErrorMappingResult(HttpStatus.UNAUTHORIZED, ex.getMessage(), List.of()),
+            UserAlreadyExistsException.class, ex -> new ErrorMappingResult(HttpStatus.CONFLICT, ex.getMessage(), List.of()),
+            UserNotFoundException.class, ex -> new ErrorMappingResult(HttpStatus.NOT_FOUND, ex.getMessage(), List.of()),
+            InvalidUserDataException.class, ex -> new ErrorMappingResult(HttpStatus.BAD_REQUEST, ex.getMessage(), List.of()),
+            ValidationException.class, this::handleValidationException,
+            NumberFormatException.class, ex -> new ErrorMappingResult(HttpStatus.BAD_REQUEST, INVALID_FORMAT_MESSAGE, List.of())
+    );
+
     @Override
-    public Mono<Void> handle(ServerWebExchange exchange, Throwable ex) {
+    @NonNull
+    public Mono<Void> handle(@NonNull ServerWebExchange exchange, @NonNull Throwable ex) {
         log.error("Global exception handler caught: {}", ex.getMessage(), ex);
 
-        HttpStatus status;
-        String message;
-        String details = null;
+        ErrorMappingResult errorResult = mapException(ex);
+        ErrorResponse errorResponse = createErrorResponse(errorResult);
 
-        if (ex instanceof InvalidCredentialsException) {
-            status = HttpStatus.UNAUTHORIZED;
-            message = ex.getMessage();
-        } else if (ex instanceof UserAlreadyExistsException) {
-            status = HttpStatus.CONFLICT;
-            message = ex.getMessage();
-        } else if (ex instanceof UserNotFoundException) {
-            status = HttpStatus.NOT_FOUND;
-            message = ex.getMessage();
-        } else if (ex instanceof InvalidUserDataException) {
-            status = HttpStatus.BAD_REQUEST;
-            message = ex.getMessage();
-        } else if (ex instanceof ValidationException) {
-            status = HttpStatus.BAD_REQUEST;
-            message = "Validation errors in request data";
-            details = extractValidationDetails((ValidationException) ex);
-        } else if (ex instanceof NumberFormatException) {
-            status = HttpStatus.BAD_REQUEST;
-            message = "Invalid ID format provided";
-        } else {
-            status = HttpStatus.INTERNAL_SERVER_ERROR;
-            message = "An unexpected error occurred";
-        }
-
-        exchange.getResponse().setStatusCode(status);
-        exchange.getResponse().getHeaders().add("Content-Type", MediaType.APPLICATION_JSON_VALUE);
-
-        String body = buildErrorResponse(status, message, details);
-
-        DataBuffer buffer = exchange.getResponse().bufferFactory()
-                .wrap(body.getBytes(StandardCharsets.UTF_8));
-
-        return exchange.getResponse().writeWith(Mono.just(buffer));
+        return writeErrorResponse(exchange, errorResult.status(), errorResponse);
     }
 
-    private String extractValidationDetails(ValidationException validationException) {
+    private ErrorMappingResult mapException(Throwable ex) {
+        return exceptionMappings.entrySet().stream()
+                .filter(entry -> entry.getKey().isInstance(ex))
+                .findFirst()
+                .map(entry -> entry.getValue().apply(ex))
+                .orElse(new ErrorMappingResult(HttpStatus.INTERNAL_SERVER_ERROR, UNEXPECTED_ERROR_MESSAGE, List.of()));
+    }
+
+    private ErrorMappingResult handleValidationException(Throwable ex) {
+        ValidationException validationEx = (ValidationException) ex;
+        List<String> details = extractValidationDetails(validationEx);
+        return new ErrorMappingResult(HttpStatus.BAD_REQUEST, VALIDATION_ERROR_MESSAGE, details);
+    }
+
+    private List<String> extractValidationDetails(ValidationException validationException) {
         if (validationException.getErrors() == null || !validationException.getErrors().hasFieldErrors()) {
-            return null;
+            return List.of();
         }
 
         List<String> errorDetails = validationException.getErrors().getFieldErrors().stream()
                 .map(this::formatFieldError)
-                .collect(Collectors.toList());
+                .toList();
 
         log.warn("Validation error details: {}", errorDetails);
-
-        return "[" + errorDetails.stream()
-                .map(detail -> "\"" + detail.replace("\"", "\\\"") + "\"")
-                .collect(Collectors.joining(",")) + "]";
+        return errorDetails;
     }
 
     private String formatFieldError(FieldError fieldError) {
-        return String.format("Field '%s' with value '%s': %s",
+        return String.format(FIELD_ERROR_FORMAT,
                 fieldError.getField(),
                 fieldError.getRejectedValue(),
                 fieldError.getDefaultMessage());
     }
 
-    private String buildErrorResponse(HttpStatus status, String message, String details) {
-        if (details != null) {
-            return String.format(
-                    "{\"error\":\"%s\",\"status\":%d,\"message\":\"%s\",\"details\":%s,\"timestamp\":\"%s\"}",
-                    status.getReasonPhrase(),
-                    status.value(),
-                    message,
-                    details,
-                    java.time.LocalDateTime.now()
+    private ErrorResponse createErrorResponse(ErrorMappingResult errorResult) {
+        if (errorResult.details() != null && !errorResult.details().isEmpty()) {
+            return ErrorResponse.withDetails(
+                    errorResult.status().getReasonPhrase(),
+                    errorResult.status().value(),
+                    errorResult.message(),
+                    errorResult.details()
             );
         } else {
-            return String.format(
-                    "{\"error\":\"%s\",\"status\":%d,\"message\":\"%s\",\"timestamp\":\"%s\"}",
-                    status.getReasonPhrase(),
-                    status.value(),
-                    message,
-                    java.time.LocalDateTime.now()
+            return ErrorResponse.of(
+                    errorResult.status().getReasonPhrase(),
+                    errorResult.status().value(),
+                    errorResult.message()
             );
         }
+    }
+
+    private Mono<Void> writeErrorResponse(ServerWebExchange exchange, HttpStatus status, ErrorResponse errorResponse) {
+        exchange.getResponse().setStatusCode(status);
+        exchange.getResponse().getHeaders().add("Content-Type", MediaType.APPLICATION_JSON_VALUE);
+
+        try {
+            String body = objectMapper.writeValueAsString(errorResponse);
+            DataBuffer buffer = exchange.getResponse().bufferFactory()
+                    .wrap(body.getBytes(StandardCharsets.UTF_8));
+            return exchange.getResponse().writeWith(Mono.just(buffer));
+        } catch (JsonProcessingException e) {
+            log.error("Error serializing error response", e);
+            return exchange.getResponse().setComplete();
+        }
+    }
+
+    private record ErrorMappingResult(HttpStatus status, String message, List<String> details) {
     }
 }
